--- a/css/fazerpedido.css
+++ b/css/fazerpedido.css
@@ -1,404 +1,346 @@
-.area-pedido {
-    display: flex;
+* {
+    box-sizing: border-box;
 }
-
+body {
+    background-color:#EEE;
+    font-family:'Lato',Helvetica,Arial;
+    font-size:15px;
+    display:flex;
+    margin:0;
+    min-height:100vh;
+	padding-top: 80px;
+}
 .models {
-    display: none;
+    display:none;
 }
 
 header {
     position: fixed;
-    left: 50%;
-    transform: translate(-50%);
-    top: 20px;
-    /* right: 0; */
-    height: 60px;
-    /* background-color: #f26820; */
-    display: none;
-    justify-content: center;
+    left:0;
+    top:0;
+    right:0;
+    height:60px;
+    background-color:#399ade;
+    display:block;
+    justify-content: flex-end;
     align-items: center;
 }
-
 .menu-openner {
-    /* margin-right: 15px; */
+    margin-right: 15px;
     font-size: 26px;
-    background-color: rgb(150, 23, 61);
+    background-color: #f26820;
     padding: 5px 20px;
     border-radius: 5px;
+    transition: transform 0.5s;
 }
 
+.menu-openner:hover{
+    background-color: #b14545;
+    color: #faebd7;
+    transform: scale(1.1);
+}
 .menu-openner span {
-    margin-right: 10px;
+    margin-right:10px;
 }
-
 .menu-closer {
-    width: 32px;
-    height: 32px;
-    display: none;
+    width:32px;
+    height:32px;
+    display:none;
     font-size: 30px;
-}
-
-.h1-burgers {
-    text-align: center;
-    font-family: 'Calistoga';
-    letter-spacing: 5px;
-    color: #faca71;
-    font-size: 30px;
-    margin-top: 20px;
-    margin-bottom: 50px;
 }
 
 aside {
-    /* background-color: #9ccbe6; */
-    background-color: #666666;
-    width: 0vw;
-    transition: all ease .2s;
-    overflow-x: hidden;
+    background-color:#9ccbe6;
+    width:0vw;
+    font-family:'Hepta Slab', Helvetica, Arial;
+    transition:all ease .2s;
+    overflow-x:hidden;
 }
-
 aside.show {
-    width: 30vw;
+    width:30vw;
+    background-color: #b8b8b8;
 }
-
 .cart--area {
-    padding: 20px;
+    padding:20px;
+    background-color: #b8b8b8;
 }
-
 main {
-    flex: 1;
-    padding: 20px;
+    flex:1;
+    padding:20px;
 }
-
-.h1 {
-    text-align: center;
-    font-family: 'Calistoga';
-    font-size: 60px;
+h1 {
+    font-family:'Hepta Slab', Helvetica, Arial;
 }
-
-.burger-area,
-.sobremesas-area {
-    display: grid;
+.burgers-area {
+    display:grid;
     grid-template-columns: repeat(3, 1fr);
 }
 
-.burger-item {
-    text-align: center;
-    max-width: 250px;
-    margin: 0 auto 50px auto;
+.bebidas-area {
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
-.burger-item a {
-    display: flex;
+.sobremesas-area {
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+.produto-item {
+    text-align: center;
+    max-width:250px;
+    font-family:'Hepta Slab', Helvetica, Arial;
+    margin:0 auto 50px auto;
+}
+.produto-item a {
+    display:flex;
     flex-direction: column;
-    align-items: center;
+    align-items:center;
     text-decoration: none;
 }
-
-.burger-item--img {
-    width: 200px;
-    height: 200px;
-    background-color: #EEE;
-    border-radius: 100px;
-    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.2);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.produto-item--img {
+    width:200px;
+    height:200px;
+    background-color:#EEE;
+    border-radius:100px;
+    box-shadow:0px 10px 50px rgba(0, 0, 0, 0.2);
 }
-
-.burger-item--img img {
-    width: 150px;
-    height: 150px;
+.produto-item--img img {
+    width:200px;
+    height:200px;
     object-fit: contain;
 }
-
-.burger-item--add {
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    border-radius: 25px;
-    background-color: #f26820;
-    text-align: center;
-    color: #1b1b1b;
-    font-size: 22px;
-    cursor: pointer;
-    margin-top: -25px;
-    transition: all ease .4s;
+.produto-item--add {
+    width:50px;
+    height:50px;
+    line-height:50px;
+    border-radius:25px;
+    background-color:#f26820;
+    text-align:center;
+    color: black;
+    font-size:22px;
+    cursor:pointer;
+    margin-top:-25px;
+    transition: transform 0.5s;
 }
-
-.burger-item a:hover .burger-item--add {
+.produto-item a:hover .produto-item--add {
     background-color: #b14545;
+    color: #faebd7;
     transform: scale(1.1);
-    color: wheat;
 }
-
-.burger-item--price {
-    font-size: 15px;
-    color: #333;
-    margin-top: 5px;
+.produto-item--price {
+    font-size:15px;
+    color:#333;
+    margin-top:5px;
 }
-
-.burger-item--name {
-    font-size: 20px;
+.produto-item--name {
+    font-size:20px;
     font-weight: bold;
-    color: #000;
-    margin-top: 5px;
+    color:#000;
+    margin-top:5px;
+}
+.produto-item--desc {
+    font-size:13px;
+    color:#555;
+    margin-top:10px;
 }
 
-.burger-item--desc {
-    font-size: 13px;
-    color: #555;
-    margin-top: 10px;
-}
-
-.burgerWindowArea {
-    position: fixed;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    background-color: rgba(255, 255, 255, 0.5);
-    display: none;
+.produtoWindowArea {
+    position:fixed;
+    left:0;
+    top:0;
+    bottom:0;
+    right:0;
+    background-color:rgba(255, 255, 255, 0.5);
+    display:none;
     transition: all ease .5s;
     justify-content: center;
     align-items: center;
-    overflow-y: auto;
+    overflow-y:auto;
 }
-
-.burgerWindowBody {
-    /* width: 900px; */
-    background-color: #FFF;
-    border-radius: 10px;
-    box-shadow: 0px 0px 15px #999;
-    display: flex;
-    margin: 20px 0px;
-    padding: 20px;
+.produtoWindowBody {
+    width:900px;
+    background-color:#FFF;
+    border-radius:10px;
+    box-shadow:0px 0px 15px #999;
+    display:flex;
+    margin:20px 0px;
 }
-
-.burgerBig {
-    flex: 1;
-    display: flex;
+.produtoBig {
+    flex:1;
+    display:flex;
     justify-content: center;
     align-items: center;
+    width: 30%;
 }
-
-.burgerBig--back {
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    background-color: #000;
+.produtoBig--back {
+    position:absolute;
+    width:30px;
+    height:30px;
+    background-color:#000;
 }
-
-.burgerBig img {
-    height: 300px;
-    width: 300px;
-    object-fit: contain;
+.produtoBig img {
+    height: 75%;
+    width:auto;
 }
-
-.burgerInfo {
-    flex: 1;
-    padding-bottom: 50px;
+.produtoInfo {
+    flex:1;
+    font-family:'Hepta Slab', Helvetica, Arial;
+    padding-bottom:50px;
 }
-
-.burgerInfo h1 {
-    margin-top: 50px;
+.produtoInfo h1 {
+    margin-top:50px;
 }
-
-.burgerInfo .burgerInfo--desc {
-    font-size: 15px;
-    color: #999;
-    margin-top: 10px;
+.produtoInfo .produtoInfo--desc {
+    font-size:15px;
+    color:#999;
+    margin-top:10px;
+    font-family:'Lato',Helvetica,Arial;
 }
-
-.burgerInfo--sector {
-    color: #CCC;
+.produtoInfo--sector {
+    color:#CCC;
     text-transform: uppercase;
-    font-size: 14px;
-    margin-top: 30px;
-    margin-bottom: 10px;
+    font-size:14px;
+    margin-top:30px;
+    margin-bottom:10px;
 }
-
-.burgerInfo--sizes {
-    display: inline-flex;
-    border-radius: 10px;
-    overflow: hidden;
+.produtoInfo--sizes {
+    display:inline-flex;
+    border-radius:10px;
+    overflow:hidden;
 }
-
-.burgerInfo--size {
-    padding: 10px 15px;
-    color: #000;
-    background-color: #EEE;
-    font-size: 13px;
+.produtoInfo--size {
+    padding:10px 15px;
+    color:#000;
+    background-color:#EEE;
+    font-size:13px;
     font-weight: bold;
-    cursor: pointer;
+    cursor:pointer;
+    font-weight: 700;
 }
-
-.burgerInfo--size:hover {
-    background-color: #CCC;
+.produtoInfo--size:hover {
+    background-color:#CCC;
 }
-
-.burgerInfo--size.selected {
-    background-color: #3b3b3b;
-    color: #FFF;
-
+.produtoInfo--size.selected {
+    background-color: #3B3B3B;
+    color:#FFF;
 }
-
-.burgerInfo--size.selected span {
-    color: #D6D6D6;
+.produtoInfo--size.selected span {
+    color:#D6D6D6;
 }
-
-.burgerInfo--size span {
-    font-size: 12px;
-    color: #999;
+.produtoInfo--size span {
+    font-size:12px;
+    color:#999;
     font-weight: normal;
 }
-
-.burgerInfo--price {
-    display: flex;
-    align-items: center;
+.produtoInfo--price {
+    display:flex;
+    align-items:center;
 }
-
-.burgerInfo--actualPrice {
-    font-size: 28px;
-    margin-right: 30px;
+.produtoInfo--actualPrice {
+    font-size:28px;
+    margin-right:30px;
 }
-
-.burgerInfo--qtarea {
-    display: inline-flex;
-    background-color: #EEE;
-    border-radius: 10px;
-    height: 30px;
+.produtoInfo--qtarea {
+    display:inline-flex;
+    background-color:#EEE;
+    border-radius:10px;
+    height:30px;
 }
-
-.burgerInfo--qtarea button {
-    border: 0;
-    background-color: transparent;
-    font-size: 17px;
-    outline: 0;
-    cursor: pointer;
-    padding: 0px 10px;
-    color: #333;
+.produtoInfo--qtarea button {
+    border:0;
+    background-color:transparent;
+    font-size:17px;
+    outline:0;
+    cursor:pointer;
+    padding:0px 10px;
+    color:#333;
 }
-
-.burgerInfo--qt {
+.produtoInfo--qt {
     line-height: 30px;
     font-size: 12px;
     font-weight: bold;
     padding: 0px 5px;
-    color: #000;
+    color:#000;
 }
-
-.burgerInfo--addButton {
-    margin-top: 30px;
-    padding: 20px 30px;
-    border-radius: 20px;
-    background: linear-gradient(#faca71, #fae571);
+.produtoInfo--addButton {
+    margin-top:30px;
+    padding:20px 30px;
+    border-radius:20px;
+    background-color: #faca71;
     color: #1b1b1b;
-    font-weight: 700;
-    display: inline-block;
-    cursor: pointer;
-    margin-right: 30px;
-    animation: pulse 2s infinite;
+    display:inline-block;
+    cursor:pointer;
+    margin-right:30px;
+    transition: all 1s ease;
 }
-
-@keyframes pulse {
-    0% {
-        box-shadow: 0 0 0 2px rgba(250, 229, 113, 0.7);
-    }
-
-    50% {
-        box-shadow: 0 0 0 10px rgba(250, 229, 113, 0);
-    }
-
-    100% {
-        box-shadow: 0 0 0 0 rgba(250, 229, 113, 0);
-    }
+.produtoInfo--addButton:hover {
+    background-color: #e66916;
 }
-
-.burgerInfo--addButton:hover {
-    background-color: #32a345;
+.produtoInfo--cancelButton {
+    display:inline-block;
+    cursor:pointer;
 }
-
-.burgerInfo--cancelButton {
-    display: inline-block;
-    cursor: pointer;
-}
-
-.burgerInfo--cancelMobileButton {
-    display: none;
-    height: 40px;
-    text-align: center;
+.produtoInfo--cancelMobileButton {
+    display:none;
+    height:40px;
+    text-align:center;
     line-height: 40px;
-    margin-bottom: 30px;
+    margin-bottom:30px;
 }
-
-
-/* .cart {
-    margin-bottom: 20px;
-} */
-
+.cart {
+    margin-bottom:20px;
+}
 .cart--item {
-    display: flex;
-    align-items: center;
-    margin: 10px 0;
+    display:flex;
+    align-items:center;
+    margin:10px 0;
 }
-
 .cart--item img {
-    width: 40px;
-    height: 40px;
-    margin-right: 20px;
-    object-fit: contain;
+    width:40px;
+    height:40px;
+    margin-right:20px;
 }
-
 .cart--item-nome {
-    flex: 1;
-    padding-left: 20px;
-    color: #faebd7;
+    flex:1;
 }
-
 .cart--item--qtarea {
-    display: inline-flex;
-    background-color: #EEE;
-    border-radius: 10px;
-    height: 30px;
+    display:inline-flex;
+    background-color:#EEE;
+    border-radius:10px;
+    height:30px;
 }
-
 .cart--item--qtarea button {
-    border: 0;
-    background-color: transparent;
-    font-size: 17px;
-    outline: 0;
-    cursor: pointer;
-    padding: 0px 10px;
-    color: #333;
+    border:0;
+    background-color:transparent;
+    font-size:17px;
+    outline:0;
+    cursor:pointer;
+    padding:0px 10px;
+    color:#333;
 }
-
 .cart--item--qt {
     line-height: 30px;
     font-size: 12px;
     font-weight: bold;
     padding: 0px 5px;
-    color: #000;
+    color:#000;
 }
-
 .cart--totalitem {
-    padding: 15px 0;
-    border-top: 1px solid #faebd7;
-    color: #faebd7;
-    display: flex;
+    padding:15px 0;
+    border-top:1px solid #79b9dd;
+    color:#315970;
+    display:flex;
     justify-content: space-between;
-    font-size: 15px;
+    font-size:15px;
 }
-
 .cart--totalitem span:first-child {
     font-weight: bold;
 }
-
 .cart--totalitem.big {
-    font-size: 20px;
-    color: #faebd7;
+    font-size:20px;
+    color:#000;
     font-weight: bold;
 }
-
 .cart--finalizar {
     padding: 20px 30px;
     border-radius: 20px;
@@ -408,118 +350,130 @@ main {
     cursor: pointer;
     text-align: center;
     margin-top: 20px;
-    transition: all 0.4s ease;
-    animation: pulse 2s infinite;
+    transition: all 1s ease;
 }
-
 .cart--finalizar:hover {
     background-color: #e66916;
-    animation: none;
 }
 
 @media (max-width:1000px) {
-
-    .burger-area,
+    .burgers-area {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .bebidas-area {
+        grid-template-columns: repeat(2, 1fr);
+    }
     .sobremesas-area {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
-@media (max-width:768px) {
+@media (max-width:840px) {
     body {
         flex-direction: column;
     }
-
-    .burger-area,
+    .burgers-area {
+        display:block;
+    }
+    .bebidas-area {
+        display:block;
+    }
     .sobremesas-area {
-        display: block;
+        display:block;
     }
-
-    .burger-item {
-        max-width: 100%;
+    .produto-item {
+        max-width:100%;
     }
-
     header {
-        display: flex;
+        display:flex;
     }
-
     main {
-        padding-top: 60px;
+        padding-top:60px;
     }
 
     aside {
-        width: auto;
-        position: fixed;
-        left: 100vw;
-        right: 0;
-        top: 0;
-        bottom: 0;
+        width:auto;
+        position:fixed;
+        left:100vw;
+        right:0;
+        top:0;
+        bottom:0;
         transition: all ease .2s;
     }
-
     aside.show {
-        width: auto;
+        width:auto;
     }
-
-    /* .cart--area {
-        width: 100vw;
-    } */
+    .cart--area {
+        width:100vw;
+    }
 
     .menu-closer {
-        display: block;
+        display:block;
     }
 
-    .burgerWindowArea {
-        justify-content: flex-start;
+    .produtoWindowArea {
+        justify-content:flex-start;
         align-items: flex-start;
     }
 
-    .burgerWindowBody {
-        width: 100vw;
-        /* height: 100vh; */
-        display: block;
-        padding: 20px;
-        border-radius: 0;
-        box-shadow: none;
-        margin: 0;
+    .produtoWindowBody {
+        width:100vw;
+        display:block;
+        padding:20px;
+        border-radius:0;
+        box-shadow:none;
+        margin:0;
     }
 
-    .burgerInfo h1 {
-        margin-top: 20px;
+    .produtoBig img {
+        width: 75%;
+        height: auto;
     }
 
-    .burgerInfo--qtarea {
-        height: 60px;
+    .produtoInfo h1 {
+        margin-top:20px;
     }
 
-    .burgerInfo--qtarea button {
-        font-size: 25px;
-        padding: 0px 25px;
+    .produtoInfo--qtarea {
+        height:60px;
     }
-
-    .burgerInfo--qt {
+    .produtoInfo--qtarea button {
+        font-size:25px;
+        padding:0px 25px;
+    }
+    .produtoInfo--qt {
         line-height: 60px;
-        font-size: 20px;
+        font-size:20px;
+    }
+    .produtoInfo--addButton {
+        font-size:20px;
+        display:block;
+        text-align:center;
+        margin:30px auto;
     }
 
-    .burgerInfo--addButton {
-        font-size: 20px;
-        display: block;
-        text-align: center;
-        margin: 30px auto;
+    .produtoInfo--cancelButton {
+        display:none;
+    }
+    .produtoInfo--cancelMobileButton {
+        display:block;
     }
 
-    .burgerInfo--cancelButton {
-        display: none;
+    .menu-principal{
+        margin-top: 30px;
     }
+}
 
-    .burgerInfo--cancelMobileButton {
-        display: block;
-    }
+.produtos-h1 {
+    font-size: 60px;
+    font-weight: 700;
+    font-family: 'calistoga';
+    color: #1b1b1b;
+    text-align: center;
+    margin: 20px 0;
 
-    .burgerBig img {
-        height: 200px;
-        width: 200px;
-        object-fit: contain;
-    }
-} 
+}
+
+.exclamacao-decoration {
+    color: #f26820;
+}
