--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@ body {
     margin-top: 10px;
     margin-bottom: 20px;
     cursor: pointer;
+    border-radius: 10px;
 }
 
 .mobile-menu .menu-info {
@@ -175,9 +176,7 @@ body {
     color: #faebd7;
     cursor: pointer;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    width: 100%;
 }
-
 
 .hidden {
     display: none;
